--- a/ifac_si_app/src/app/component/my-publications/my-publications.component.html
+++ b/ifac_si_app/src/app/component/my-publications/my-publications.component.html
@@ -18,6 +18,7 @@
     <div *ngIf="show">
         <app-modal-form (cancelForm)="showModal()" (confirmForm)="deletePost()"></app-modal-form>
     </div>
+    <app-trash-view></app-trash-view>
     <div class="container">
         <div class="postList">
             <div *ngFor="let post of postsUsuario">
