style: Mudança de cores e tamanho para o botão da lixeira

--- a/ifac_si_app/src/app/component/my-publications/my-publications.component.css
+++ b/ifac_si_app/src/app/component/my-publications/my-publications.component.css
@@ -182,3 +182,15 @@ div.postData p {
     font-size: 18px;
     font-weight: 500;
 }
+
+button#buttonTrash {
+    width: fit-content;
+    background-color: white;
+    border-color: #623CEA;
+    color: #623CEA;
+}
+
+button#buttonTrash:hover {
+    background-color: #623CEA;
+    color: white;
+}
