--- a/ifac_si_app/src/app/component/trash-view/trash-view.component.html
+++ b/ifac_si_app/src/app/component/trash-view/trash-view.component.html
@@ -1,1 +1,25 @@
-<p>trash-view works!</p>
+<div class="container">
+        <div class="postList">
+            <div *ngFor="let listPost of lista_teste">
+                <div class="postView">
+                    <div id="postComposition" #postComposition>
+                        <div class="categorys">{{listPost.post.categoria?.nome}}</div>
+                        <div id="postImage" #postImage>
+                            <button class="eyeButton" #showButton [attr.data-post-id]="listPost.post.id"><i class="bi bi-eye" style="font-weight: bold;"></i></button>
+                            <img *ngIf="listPost.post.imagemCapa" [src]="listPost.post.imagemCapa.url" alt="Imagem do post">
+                            <img *ngIf="!listPost.post.imagemCapa" src="../../../assets/images/no-photo.png" alt="Imagem indisponível">
+                        </div>
+                    </div>
+                    <div id="postAction" #postAction>
+                        <button #deleteButton [attr.data-post-id]="listPost.post.id"><i class="bi bi-trash3" style="font-weight: bold;"></i></button>
+                        <button #editButton [attr.data-post-id]="listPost.post.id"><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
+                    </div>
+                </div>
+                <div class="postData">
+                    <p> {{listPost.post.titulo}} </p>
+                    <p> {{listPost.post.data | date: 'dd/MM/yyyy'}} </p>
+                    <p *ngIf="listPost.acao == 'REMOCAO'" style="color: red;">ARQUIVADO</p>
+                </div>
+            </div>
+        </div>
+    </div>
