--- a/ifac_si_app/src/app/component/trash-view/trash-view.component.css
+++ b/ifac_si_app/src/app/component/trash-view/trash-view.component.css
@@ -182,3 +182,18 @@ div.postData p {
     font-size: 18px;
     font-weight: 500;
 }
+
+
+section {
+    width: 100%;
+    height: 8%;
+    background-color:#876beb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section h5 {
+    color: aliceblue;
+    text-align: center;
+}
