refactor: Mudando texto nos botões

--- a/ifac_si_app/src/app/component/trash-view/trash-view.component.html
+++ b/ifac_si_app/src/app/component/trash-view/trash-view.component.html
@@ -10,8 +10,8 @@
     (ordemMudou)="atualizarOrdem($event)" -->
     </app-filters>
     <div>
-        <input type="checkbox" name="selecionarTodos" id="selectAll"> Esvaziar todos
-        <input type="checkbox" name="restaurarTodos" id="restoreAll"> Selecionar todos
+        <input type="checkbox" name="selecionarTodos" id="selectAll"> Selecionar todos
+        <input type="checkbox" name="restaurarTodos" id="restoreAll"> Restaurar todos
         <button>Esvaziar Lixeira</button>
     </div>
     <div class="container">
