--- a/ifac_si_app/src/app/component/my-publications/my-publications.component.css
+++ b/ifac_si_app/src/app/component/my-publications/my-publications.component.css
@@ -4,27 +4,58 @@ div.viewPost{
     justify-content: center;
     /* padding-left: 20px; */
     margin: 20px auto;
-    max-width: 1200px;
     padding: 0 40px;
     box-sizing: border-box;
 }
 
+.page-background {
+  background-color: #e9e9e9;
+  min-height: 100vh; /* Garante que cubra toda a tela */
+  padding: 40px;
+  margin: 0;
+}
+
 div#userData {
+    background-color: white;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     /* justify-content: center; */
-    margin: 50px 20px 0px 15px;
-    max-width: 1200px;
+    margin: 0 auto 40px auto;
+    width: fit-content;
+    margin-top: 60px;
     padding: 0 40px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra sutil */
     box-sizing: border-box;
 }
 
 div.userCard {
+    width: 100%;
     margin-top: 10px;
     background-color: #876beb;
     color: black;
     padding: 20px;
     border-radius: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto)); /* responsivo */
+    gap: 12px;
+    justify-content: center;
+}
+
+div.cardInfo {
+    margin: 5px;
+    padding: 6px 12px;
+    width: fit-content;
+    background-color: aliceblue;
+    border-left: 8px solid #3FA14C;
+    border-radius: 6px;
+}
+
+div.cardInfo > p {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 body {
