--- a/ifac_si_app/src/app/component/my-publications/my-publications.component.css
+++ b/ifac_si_app/src/app/component/my-publications/my-publications.component.css
@@ -1,13 +1,3 @@
-div.viewPost{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* padding-left: 20px; */
-    margin: 20px auto;
-    padding: 0 40px;
-    box-sizing: border-box;
-}
-
 .page-background {
   background-color: #e9e9e9;
   min-height: 100vh; /* Garante que cubra toda a tela */
@@ -15,17 +5,30 @@ div.viewPost{
   margin: 0;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden;
+}
+
+div#alignContainer {
+    width: 100%;
+    margin: 20px auto;    
+    box-sizing: border-box;
+}
+
 div#userData {
+    border-radius: 10px;
     background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     /* justify-content: center; */
-    margin: 0 auto 40px auto;
-    width: fit-content;
+    margin: 0 auto;
     margin-top: 60px;
-    padding: 0 40px;
+    padding: 20px 40px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra sutil */
     box-sizing: border-box;
 }
@@ -33,10 +36,11 @@ div#userData {
 div.userCard {
     width: 100%;
     margin-top: 10px;
+    max-width: 1200px;
     background-color: #876beb;
     color: black;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 5px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, auto)); /* responsivo */
     gap: 12px;
@@ -58,19 +62,27 @@ div.cardInfo > p {
     flex-direction: column;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    overflow-x: hidden;
+div.viewPost{
+    border-radius: 10px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* padding-left: 20px; */
+    margin: 20px auto;
+    padding: 0 40px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
 }
 
 .container {
+    border-radius: 10px;
+    background-color: #876beb;
     width: 100%;
     margin-left: 2%;
     max-width: 1200px; /* Adicionar um max-width para controlar melhor o layout */
     margin: 0 auto; /* Centralizar o container */
-    padding: 0 40px;
+    padding: 20px 40px;
     box-sizing: border-box;
     overflow-x: hidden;
 }
@@ -89,6 +101,8 @@ div.postList div.postData {
 }
 
 div.postList > div {
+    border-radius: 10px;
+    background-color: white;
     width: 100%; /* Ajusta para ocupar o espaço da coluna */
     max-width: none; /* Remove o max-width anterior */
     min-width: 0; /* Remove o min-width anterior */
@@ -123,6 +137,7 @@ div.postView div#postComposition {
 }
 
 div.postView div#postComposition div#postImage {
+    text-align: center;
     position: absolute;
     top: 0;
     left: 0;
@@ -210,18 +225,27 @@ div.categorys {
 }
 
 div.postData p {
+    margin-left: 10px;
     font-size: 18px;
     font-weight: 500;
 }
 
 button#buttonTrash {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    padding: 12px 24px;
+    font-size: 24px;
+    border-radius: 12px;
     width: fit-content;
-    background-color: white;
-    border-color: #623CEA;
-    color: #623CEA;
+    background-color: rgb(236, 47, 47);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.30); 
+    transition: all 0.3s ease;
+    color: white;
+    cursor: pointer;
 }
 
 button#buttonTrash:hover {
-    background-color: #623CEA;
+    background-color: rgb(148, 26, 26);
     color: white;
 }
