--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -119,7 +119,7 @@ button#buttonSave:hover {
 div#tagContainer {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
 }
 
 div#tagContainer > input {
@@ -130,12 +130,35 @@ div#tagContainer > i {
     margin-left: 10px;
 }
 
+.input-with-button {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.input-with-button input {
+    flex: 1;
+    margin: 0;
+}
+
+.input-with-button i {
+    font-size: 18px;
+    cursor: pointer;
+    padding: 4px;
+}
+
 .dropdown {
     position: relative;
     display: inline-block;
     /* width: 190px; */
     flex-shrink: 0;
     /* margin: 0 10px; */
+}
+
+.dropdown:last-of-type {
+    margin-top: 30px;
+    padding-top: 20px;
+    border-top: 1px solid #ddd;
 }
 
 .dropdown-content {
@@ -324,4 +347,11 @@ div#labelTag {
 
 div#labelTag i {
     color: rgb(248, 200, 138);
+}
+
+#labelSelecionadas i.bi-check-square {
+    background-color: #28a745;
+    color: white;
+    padding: 2px;
+    border-radius: 2px;
 }
