style: Mudando cor e posicionamento de lista de tags, principalmente as já cadastradas no post

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -191,7 +191,7 @@
                             <div class="selected-tags-list">
                                 <p *ngFor="let tag of tagsList">
                                     {{ tag.nome }} 
-                                    <i class="bi bi-x" (click)="removeTag(tag)"></i>
+                                    <i class="bi bi-trash" (click)="removeTag(tag)"></i>
                                     <i class="bi bi-pencil me-2" (click)="editTag(tag)" *ngIf="tag.id == null"></i>
                                 </p>
                             </div>
