--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -355,3 +355,44 @@ div#labelTag i {
     padding: 2px;
     border-radius: 2px;
 }
+
+.selected-tags-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border: 2px solid #28a745;
+    border-radius: 4px;
+    background-color: #f8fff9;
+    min-height: 60px;
+    max-height: 150px;
+    overflow-y: auto;
+    padding: 8px;
+}
+
+.selected-tags-list p {
+    width: fit-content;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #28a745;
+    color: white;
+    padding: 6px 12px;
+    margin: 4px 2px;
+    border-radius: 20px;
+    font-size: 350;
+}
+
+.selected-tags-list p i {
+    cursor: pointer;
+    margin-left: 8px;
+    font-weight: 200;
+    font-size: large;
+}
+
+.selected-tags-list p i.bi.bi-trash:hover {
+    color: red; 
+}
+
+.selected-tags-list p i.bi.bi-pencil:hover {
+  color: #007bff; /* Azul claro */
+}
